fix: gallery styling fix when window is too tall

--- a/src/components/ZipView.scss
+++ b/src/components/ZipView.scss
@@ -1,7 +1,8 @@
 :global {
   .fullscreen {
     img {
-      height: 100vh;
+      height: auto;
+      max-height: 100vh;
     }
 
     div {
